--- a/Index.html
+++ b/Index.html
@@ -14,9 +14,9 @@
 <body>
 	<div class="sortable-list">
 		<ul id="sortable">
-			<li draggable="true">Item 1<p>description</p></li>
-			<li draggable="true">Item 2</li>
-			<li draggable="true">Item 3</li>
+			<li draggable="true">Item 1<p>this is item 1</p></li>
+			<li draggable="true">Item 2<p>this is item 2</p></li>
+			<li draggable="true">Item 3<p>this is item 3</p></li>
 			<!-- Add more list items as needed -->
 		</ul>
 	</div>
