--- a/index.html
+++ b/index.html
@@ -3,12 +3,22 @@
   <title>List Projects</title>
 </head>
 
-  <body>
-<p>Test :)</p>
+<body>
+  <h1>RooDoo - List Extradorinaire</h1>
+  <p>An intereactive list platform</p>
+
+  <h2>Draggable List Prototype</h2>
+  <p>a prototype for a draggable list to be implemetnted into the to do list program</p>
+  <a href="draglist.html">Try Me!</a>
+
+  <h2>To Do List Prototype</h2>
+  <p>a prototype for a to do list program</p>
+  <a href="todo.html">Try Me!</a>
+
 
 
     
-  </body>
+ </body>
 
 
   
