--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
   <p>a prototype for a to do list program</p>
   <a href="todo.html">Try Me!</a>
 
-
+  <h2>Combo List Prototype</h2>
+  <p>a prototype for a to do list program</p>
+  <a href="combo.html">Try Me!</a>
 
     
  </body>
