--- a/homepage.html
+++ b/homepage.html
@@ -1,1 +1,38 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>StoolStats</title>
+  </head>
+<body>
 
+<h1>StoolStats</h1>
+<form id="bm-form">
+  <!-- color -->
+  <label for="p_color">Select the color:</label><br>
+  <input type="color" id="p_color" value="#ff0000"><br>
+
+  <!-- num wipes -->
+  <label for="num_wipes">Number of wipes:</label><br>
+  <input type="text" id="num_wipes" name="num_wipes"><br>
+
+  <!-- consistency -->
+  <input list="consistency" name="consistency">
+  <datalist id="consistency">
+    <option value="Hard Lumps: Small, hard pieces.">
+    <option value="Lumpy and Firm: Large, lumpy stool.">
+    <option value="Cracked but Smooth: Firm and sausage-shaped.">
+    <option value="Smooth and Soft: Soft, sausage-shaped.">
+    <option value="Soft Blobs: Small, soft pieces.">
+    <option value="Mushy Pieces: Loose and fluffy.">
+    <option value="Watery: Completely liquid. ">
+  </datalist>
+
+  <!-- difficulty -->
+  <div class="slidecontainer">
+  <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+  </div>
+  
+</form>
+
+</body>
+</html>
