--- a/index.html
+++ b/index.html
@@ -117,15 +117,17 @@
 
     <label for="consistency">Consistency:</label><br>
     <input list="consistency" id="consistency" name="consistency">
-    <datalist id="consistency">
-      <option value="Hard Lumps: Small, hard pieces.">
-      <option value="Lumpy and Firm: Large, lumpy stool.">
-      <option value="Cracked but Smooth: Firm and sausage-shaped.">
-      <option value="Smooth and Soft: Soft, sausage-shaped.">
-      <option value="Soft Blobs: Small, soft pieces.">
-      <option value="Mushy Pieces: Loose and fluffy.">
-      <option value="Watery: Completely liquid.">
-    </datalist><br><br>
+    <label for="consistency">Consistency:</label><br>
+<select id="consistency" name="consistency">
+  <option value="Hard Lumps">Hard Lumps: Small, hard pieces.</option>
+  <option value="Lumpy and Firm">Lumpy and Firm: Large, lumpy stool.</option>
+  <option value="Cracked but Smooth">Cracked but Smooth: Firm and sausage-shaped.</option>
+  <option value="Smooth and Soft">Smooth and Soft: Soft, sausage-shaped.</option>
+  <option value="Soft Blobs">Soft Blobs: Small, soft pieces.</option>
+  <option value="Mushy Pieces">Mushy Pieces: Loose and fluffy.</option>
+  <option value="Watery">Watery: Completely liquid.</option>
+</select>
+<br><br>
 
     <label for="difficulty">Difficulty:</label>
     <div class="slidecontainer">
